--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <div class="commands">home</div>
         <div class="commands">about us</div>
         <div class="commands">our business</div>
-        <div class="commands">supply chian</div>
+        <div class="commands">supply chain</div>
         <div class="commands">social ethics</div>
         <div class="commands">contact us</div>
       </div>
@@ -24,7 +24,12 @@
     </div>
 
     <div class="second-section">
-      <div class="inside-second-section">1</div>
+      <div class="inside-second-section about-us-pic">
+        <div class="about-us-text">
+          
+        </div>
+        
+        1</div>
       <div class="inside-second-section">2</div>
       <div class="inside-second-section">3</div>
       <div class="inside-second-section">4</div>
@@ -35,7 +40,7 @@
         <div class="commands">home</div>
         <div class="commands">about us</div>
         <div class="commands">our business</div>
-        <div class="commands">supply chian</div>
+        <div class="commands">supply chain</div>
         <div class="commands">social ethics</div>
         <div class="commands">contact us</div>
     </div>
