--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
           
         </div>
       </div>
-      <div class="inside-second-section">3</div>
-      <div class="inside-second-section">4</div>
+      <div class="inside-second-section"></div>
+      <div class="inside-second-section"></div>
     </div>
     
     <div class="logo-bar"> logo bar</div>
