making the text boxes of inside sections

--- a/home.html
+++ b/home.html
@@ -25,7 +25,15 @@
 
     <div class="second-section">
       <div class="inside-second-section about-us-pic">
-        <div class="about-us-text"></div>        
+        <div class="about-us-text">
+          <div>
+            <p>About Us</p>
+            <p>Lapland Textile Mfg. is a unique merchandise-manufacturing management hub based in Dhaka-Bangladesh, est. 1999.
+
+            </p>
+            <button>click here</button>
+          </div>
+        </div>        
       </div>
       <div class="inside-second-section our-business">
         <div></div>
