inside-second-section hover effect

--- a/home.html
+++ b/home.html
@@ -33,13 +33,45 @@
             </p>
             <button>click here</button>
           </div>
-        </div>        
+        </div>
+        <div class="overlay"></div>        
       </div>
       <div class="inside-second-section our-business">
-        <div></div>
+        <div class="our-business-text">
+          <div>
+            <p>Our Business</p>
+            <p>Our core business is garments merchandise-manufacturing. We apply our collective sourcing experience to make the best
+
+            </p>
+            <button>click here</button>
+          </div>
+        </div>
+        <div class="overlay"></div> 
       </div>
-      <div class="inside-second-section supply-chain"></div>
-      <div class="inside-second-section social-ethics"></div>
+      <div class="inside-second-section supply-chain">
+        <div class="supply-chain-text">
+          <div>
+            <p>Supply Chain</p>
+            <p>We are committed to developing close ties with our esteemed customers through personalized services services
+
+            </p>
+            <button>click here</button>
+          </div>
+        </div>
+        <div class="overlay"></div> 
+      </div>
+      <div class="inside-second-section social-ethics">
+        <div class="social-ethics-text">
+          <div>
+            <p>Our Business</p>
+            <p>All suppliers and factories producing Lapland Textile Mfg. orders are entitle to a written employment contract
+
+            </p>
+            <button>click here</button>
+          </div>
+        </div>
+        <div class="overlay"></div> 
+      </div>
     </div>
     
     <div class="logo-bar"> logo bar</div>
