--- a/practice.html
+++ b/practice.html
@@ -28,7 +28,18 @@
           </div>
       </div>
     </div>
-    
+
+    <div class="text-container">
+      <p>This is some text that will be aligned.</p>
+    </div>
+    <button class="hover-button">Hover over me!</button>
+    <div class="hover-div">Hover over me!</div>
+
+    <div class="img-practice">
+      <img class="prac-img" src ="logos/about_us_2.jpg">
+      <div class="overlay"></div>
+    </div>
+
 
     <script src="practice.js"></script>
 
