first-two part complete

--- a/about-us.html
+++ b/about-us.html
@@ -17,6 +17,29 @@
       </div>
     </div>
 
+    <div class="about-us-div">
+      <div class="info-pic-container">
+        <div class="info-container">
+          <p>About Us</p>
+          <p>
+            Lapland Textile Mfg. is a unique merchandise-manufacturing management hub based in Dhaka-Bangladesh, est. 1999. We are a fast-growing apparel manufacturing company in Bangladesh -sourcing fashion accessories for our customers across the world. The entire collection of mid to high-quality fashion items is made for Men’s, Women, and Kids.. name it. We have the flexibility to meet the trend in all aspects of design, quality, and other developments that are most desired by today`s fashion-conscious market.
+          </p>
+
+          <p>
+            We manage the global sourcing requirements of over 11 companies. Our global leverage, and experience, avail our clients of the best product at the best possible price. These clients include some of the most significant brands, department stores, catalog companies, and importers in America and Europe.
+          </p>
+        </div>
+        <div class="pic-container">
+          <img src="about-us-page-pics/About_us_page.jpg">
+        </div>
+      </div>
+    </div>
+
+
+    <div class="first-text"> 
+      <p class="first-text-paragraph">"We will grow by building leading lifestyle brands that excite consumers around the world"</p>
+    </div>
+
     
   </body>
 </html>
