--- a/practice.html
+++ b/practice.html
@@ -40,6 +40,13 @@
       <div class="overlay"></div>
     </div>
 
+    <div class="container">
+      <div class="container-1"></div>
+      <div class="container-2">
+
+      </div>
+    </div>
+
 
     <script src="practice.js"></script>
 
