--- a/practice.html
+++ b/practice.html
@@ -41,9 +41,19 @@
     </div>
 
     <div class="container">
-      <div class="container-1"></div>
-      <div class="container-2">
+      <div class="container-1">this is cotainer 1</div>
+      <div class="container-2">this is cotainer 2
+        <div class="inside-2"> 
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
+          <div>7</div>
+          <div>8</div>
 
+        </div>
       </div>
     </div>
 
