--- a/about-us.html
+++ b/about-us.html
@@ -60,8 +60,17 @@
     <div class="logo-div">
       <div class="platform-button"></div>
       <div class="logo-bar-div">
-        
-      </div>
+        <div class="inside-logo-bar">
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
+          <div>7</div>
+          <div>8</div>
+        </div>
+    </div>
     </div>
     
   </body>
