logo bar complete

--- a/about-us.html
+++ b/about-us.html
@@ -58,17 +58,40 @@
     </div>
 
     <div class="logo-div">
-      <div class="platform-button"></div>
+      <div class="platform-button">
+        <div class="inside-platform">
+          <div class="text-div">
+            <p>platform audits & certifications</p>
+          </div>
+          <div class="button-div"></div>
+        </div>
+      </div>
       <div class="logo-bar-div">
         <div class="inside-logo-bar">
-          <div>1</div>
-          <div>2</div>
-          <div>3</div>
-          <div>4</div>
-          <div>5</div>
-          <div>6</div>
-          <div>7</div>
-          <div>8</div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/190419-001-300x101-1.jpg">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/amforia_0-300x104-1.png">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/BetterWork.jpg">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/gloval-organic-300x105-1.png">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/ILO.jpg">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/oeko-tex-300x105-1.png">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/organic-300x105-1.png">
+          </div>
+          <div class="icons-class">
+            <img src="about-us-page-pics/icons/RSC-Logo.jpg">
+          </div>
         </div>
     </div>
     </div>
