--- a/practice.html
+++ b/practice.html
@@ -57,6 +57,10 @@
       </div>
     </div>
 
+    <div class="pic">
+      <img class="pic-1" src="about-us-page-pics/icons/190419-001-300x101-1.jpg">
+    </div>
+
 
     <script src="practice.js"></script>
 
