about-us divs complete

--- a/about-us.html
+++ b/about-us.html
@@ -61,9 +61,11 @@
       <div class="platform-button">
         <div class="inside-platform">
           <div class="text-div">
-            <p>platform audits & certifications</p>
+            <p class="platform-text">Platform audits & certifications</p>
           </div>
-          <div class="button-div"></div>
+          <div class="button-div">
+            <button class="certificate-button">View all certificate</button>
+          </div>
         </div>
       </div>
       <div class="logo-bar-div">
