--- a/about-us.html
+++ b/about-us.html
@@ -95,8 +95,18 @@
             <img src="about-us-page-pics/icons/RSC-Logo.jpg">
           </div>
         </div>
+      </div>
     </div>
+    <div class="nav-bar">
+      <div class="commands">home</div>
+      <div class="commands">about us</div>
+      <div class="commands">our business</div>
+      <div class="commands">supply chain</div>
+      <div class="commands">social ethics</div>
+      <div class="commands">contact us</div>
     </div>
+
+
     
   </body>
 </html>
