done upto-procurement part

--- a/supply-chain.html
+++ b/supply-chain.html
@@ -40,5 +40,29 @@
     <div class="text-1">
       <p>"We develop products and customize services for our customers"</p>
     </div>
+
+    <div class="procurement-pic-info">
+      <div class="procurement-pic-div">
+        <img src="supply-chain/PIC-01.jpg">
+      </div>
+      <div class="procurement-text-div">
+        <p>Procurement</p>
+        <p>
+          Lapland Textile Mfg. largest apparel sourcing companies, we're committed to sourcing fabrics and accessories and factories for our entire customer.
+
+          Our culture is perpetually driven—focused on constant innovation. Using deep research and insights. We combine the art and science of apparel to create products that excite customers and brand loyalty.
+
+          We conduct business with the highest levels of honesty, integrity and respect for others, and we foster a positive work environment based on creativity, collaboration and congeniality.
+
+          Our company forces to create and develop a successful business by identifying where the opportunity for sourcing products met customer needs in faraway markets. That same entrepreneurial spirit of agility and simplicity is very much alive today and continues to drive the way we support our customers, suppliers, the industry and communities to grow.
+
+          We care about our customers, vendors and communities and about creating a sustainable future together. 
+
+          In order to give the best price and service, we evaluate the needs of our customers and assign the most suitable production unit according to those needs.
+        </p>
+      </div>
+      
+    </div>
+
   </body>
 </html>
