working on top bar

--- a/contact-us.html
+++ b/contact-us.html
@@ -8,14 +8,34 @@
   </head>
   <body>
     <div class="header">
-      <div class="first-pic">1</div>
+      <div class="first-pic">
+        <img src="logos/LAPLAND_Logo-1024x468.png">
+      </div>
       <div class="top-bar">      
-        <div class="commands">home</div>
-        <div class="commands">about us</div>
-        <div class="commands">our business</div>
-        <div class="commands">supply chain</div>
-        <div class="commands">social ethics</div>
-        <div class="commands">contact us</div>
+        <div class="commands">
+          <p class="command-text">
+            home
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">
+            about us
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">  
+            our business
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">supply chain</p>
+        </div>
+        <div class="commands">
+          <p class="command-text">social ethics</p>
+        </div>
+        <div class="commands">
+          <p class="command-text">contact us</p>
+        </div>
       </div>
 
     </div>
