--- a/practice.html
+++ b/practice.html
@@ -60,6 +60,38 @@
     <div class="pic">
       <img class="pic-1" src="about-us-page-pics/icons/190419-001-300x101-1.jpg">
     </div>
+    <div class="header">
+      <div class="first-pic">
+        <img src="logos/LAPLAND_Logo-1024x468.png">
+      </div>
+      <div class="top-bar">      
+        <div class="commands">
+          <p class="command-text">
+            home
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">
+            about us
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">  
+            our business
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">supply chain</p>
+        </div>
+        <div class="commands">
+          <p class="command-text">social ethics</p>
+        </div>
+        <div class="commands">
+          <p class="command-text">contact us</p>
+        </div>
+      </div>
+
+    </div>
 
 
     <script src="practice.js"></script>
