finishing tp bar

--- a/contact-us.html
+++ b/contact-us.html
@@ -14,12 +14,12 @@
       <div class="top-bar">      
         <div class="commands">
           <p class="command-text">
-            home
+            Home
           </p>
         </div>
         <div class="commands">
           <p class="command-text">
-            about us
+            About Us
           </p>
         </div>
         <div class="commands">
