top bar finished

--- a/about-us.html
+++ b/about-us.html
@@ -6,15 +6,36 @@
   </head>
   <body>
     <div class="header">
-      <div class="first-pic">1</div>
-      <div class="top-bar">      
-        <div class="commands">home</div>
-        <div class="commands">about us</div>
-        <div class="commands">our business</div>
-        <div class="commands">supply chain</div>
-        <div class="commands">social ethics</div>
-        <div class="commands">contact us</div>
+      <div class="first-pic">
+        <img src="logos/LAPLAND_Logo-1024x468.png">
       </div>
+      <div class="top-bar">      
+        <div class="commands">
+          <p class="command-text">
+            Home
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">
+            About Us
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">  
+            Our Business
+          </p>
+        </div>
+        <div class="commands">
+          <p class="command-text">Supply Chain</p>
+        </div>
+        <div class="commands">
+          <p class="command-text">Social Ethics</p>
+        </div>
+        <div class="commands">
+          <p class="command-text">Contact Us</p>
+        </div>
+      </div>
+
     </div>
 
     <div class="about-us-div">
