--- a/practice.html
+++ b/practice.html
@@ -6,11 +6,7 @@
   </head>
 
   <body>
-    <a href="home.html">
-      <button class="home">
-        <img class="home-pic" src="logos/LAPLAND_Logo-1024x468.png">
-      </button>
-    </a>
+
 
     <button id="event-listener">event listener</button>
 
@@ -33,65 +29,13 @@
       <p>This is some text that will be aligned.</p>
     </div>
     <button class="hover-button">Hover over me!</button>
-    <div class="hover-div">Hover over me!</div>
+    <div class="hover-div" id="hovering-div">Hover over me!</div>
 
     <div class="img-practice">
       <img class="prac-img" src ="logos/about_us_2.jpg">
       <div class="overlay"></div>
     </div>
 
-    <div class="container">
-      <div class="container-1">this is cotainer 1</div>
-      <div class="container-2">this is cotainer 2
-        <div class="inside-2"> 
-          <div>1</div>
-          <div>2</div>
-          <div>3</div>
-          <div>4</div>
-          <div>5</div>
-          <div>6</div>
-          <div>7</div>
-          <div>8</div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="pic">
-      <img class="pic-1" src="about-us-page-pics/icons/190419-001-300x101-1.jpg">
-    </div>
-    <div class="header">
-      <div class="first-pic">
-        <img src="logos/LAPLAND_Logo-1024x468.png">
-      </div>
-      <div class="top-bar">      
-        <div class="commands">
-          <p class="command-text">
-            home
-          </p>
-        </div>
-        <div class="commands">
-          <p class="command-text">
-            about us
-          </p>
-        </div>
-        <div class="commands">
-          <p class="command-text">  
-            our business
-          </p>
-        </div>
-        <div class="commands">
-          <p class="command-text">supply chain</p>
-        </div>
-        <div class="commands">
-          <p class="command-text">social ethics</p>
-        </div>
-        <div class="commands">
-          <p class="command-text">contact us</p>
-        </div>
-      </div>
-
-    </div>
 
 
     <script src="practice.js"></script>
