--- a/contact-us.html
+++ b/contact-us.html
@@ -8,33 +8,33 @@
   </head>
   <body>
     <div class="header">
-      <div class="first-pic">
+      <div class="first-pic" id="lapland-logo">
         <img src="logos/LAPLAND_Logo-1024x468.png">
       </div>
       <div class="top-bar">      
-        <div class="commands">
+        <div class="commands" id="home">
           <p class="command-text">
             Home
           </p>
         </div>
-        <div class="commands">
+        <div class="commands" id="about-us">
           <p class="command-text">
             About Us
           </p>
         </div>
-        <div class="commands">
-          <p class="command-text">  
-            our business
+        <div class="commands" id="our-business">
+          <p class="command-text" >  
+            Our Business
           </p>
         </div>
-        <div class="commands">
-          <p class="command-text">supply chain</p>
+        <div class="commands" id="supply-chain">
+          <p class="command-text">Supply Chain</p>
         </div>
-        <div class="commands">
-          <p class="command-text">social ethics</p>
+        <div class="commands" id="social-ethics">
+          <p class="command-text">Social Ethics</p>
         </div>
-        <div class="commands">
-          <p class="command-text">contact us</p>
+        <div class="commands" id="contact-us">
+          <p class="command-text">Contact Us</p>
         </div>
       </div>
 
@@ -57,5 +57,6 @@
         <img src="contact-us/R-2-1024x608.jpg">
       </div>
     </div>
+    <script src="inside-code.js"></script>
   </body>
 </html>
