working on home second section

--- a/our-business.html
+++ b/our-business.html
@@ -7,32 +7,32 @@
   </head>
   <body>
     <div class="header">
-      <div class="first-pic">
+      <div class="first-pic" id="lapland-logo">
         <img src="logos/LAPLAND_Logo-1024x468.png">
       </div>
       <div class="top-bar">      
-        <div class="commands">
+        <div class="commands" id="home">
           <p class="command-text">
             Home
           </p>
         </div>
-        <div class="commands">
+        <div class="commands" id="about-us">
           <p class="command-text">
             About Us
           </p>
         </div>
-        <div class="commands">
-          <p class="command-text">  
+        <div class="commands" id="our-business">
+          <p class="command-text" >  
             Our Business
           </p>
         </div>
-        <div class="commands">
+        <div class="commands" id="supply-chain">
           <p class="command-text">Supply Chain</p>
         </div>
-        <div class="commands">
+        <div class="commands" id="social-ethics">
           <p class="command-text">Social Ethics</p>
         </div>
-        <div class="commands">
+        <div class="commands" id="contact-us">
           <p class="command-text">Contact Us</p>
         </div>
       </div>
@@ -88,5 +88,6 @@
       <div class="commands">social ethics</div>
       <div class="commands">contact us</div>
     </div>
+    <script src="inside-code.js"></script>
   </body>
 </html>
