finished click -here button redirecting

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
             <p>Lapland Textile Mfg. is a unique merchandise-manufacturing management hub based in Dhaka-Bangladesh, est. 1999.
 
             </p>
-            <button class="second-section-buttons">click here</button>
+            <button class="second-section-buttons" id="about-us-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div>        
@@ -64,7 +64,7 @@
             <p>Our core business is garments merchandise-manufacturing. We apply our collective sourcing experience to make the best
 
             </p>
-            <button>click here</button>
+            <button id="our-business-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div> 
@@ -76,7 +76,7 @@
             <p>We are committed to developing close ties with our esteemed customers through personalized services services
 
             </p>
-            <button>click here</button>
+            <button id="supply-chain-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div> 
@@ -84,11 +84,11 @@
       <div class="inside-second-section social-ethics">
         <div class="social-ethics-text">
           <div>
-            <p>Our Business</p>
+            <p>Social Ethics</p>
             <p>All suppliers and factories producing Lapland Textile Mfg. orders are entitle to a written employment contract
 
             </p>
-            <button>click here</button>
+            <button id="social-ethics-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div> 
