--- a/home.html
+++ b/home.html
@@ -8,32 +8,32 @@
   </head>
   <body>
     <div class="header">
-      <div class="first-pic" id="lapland-logo">
+      <div class="first-pic top-first-pic-logo" >
         <img src="logos/LAPLAND_Logo-1024x468.png">
       </div>
       <div class="top-bar">      
-        <div class="commands" id="home">
-          <p class="command-text">
+        <div class="commands top-home top-home-link">
+          <p class="command-text">  
             Home
           </p>
         </div>
-        <div class="commands" id="about-us">
+        <div class="commands top-about-us top-about-us-link" >
           <p class="command-text">
             About Us
           </p>
         </div>
-        <div class="commands" id="our-business">
+        <div class="commands top-our-business top-our-business-link" >
           <p class="command-text" >  
             Our Business
           </p>
         </div>
-        <div class="commands" id="supply-chain">
+        <div class="commands top-supply-chain top-supply-chain-link" >
           <p class="command-text">Supply Chain</p>
         </div>
-        <div class="commands" id="social-ethics">
+        <div class="commands top-social-ethics top-social-ethics-link" >
           <p class="command-text">Social Ethics</p>
         </div>
-        <div class="commands" id="contact-us">
+        <div class="commands top-contact-us top-contact-us-link" >
           <p class="command-text">Contact Us</p>
         </div>
       </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="overlay"></div>        
       </div>
-      <div class="inside-second-section our-business">
+      <div class="inside-second-section our-business-pic">
         <div class="our-business-text">
           <div>
             <p>Our Business</p>
@@ -69,7 +69,7 @@
         </div>
         <div class="overlay"></div> 
       </div>
-      <div class="inside-second-section supply-chain">
+      <div class="inside-second-section supply-chain-pic">
         <div class="supply-chain-text">
           <div>
             <p>Supply Chain</p>
@@ -81,7 +81,7 @@
         </div>
         <div class="overlay"></div> 
       </div>
-      <div class="inside-second-section social-ethics">
+      <div class="inside-second-section social-ethics-pic">
         <div class="social-ethics-text">
           <div>
             <p>Social Ethics</p>
