--- a/about-us.html
+++ b/about-us.html
@@ -127,7 +127,7 @@
       <div class="commands">contact us</div>
     </div>
 
-    <script src="inside-code.js"></script>
+    <script src="code-except-home.js"></script>
     
   </body>
 </html>
