--- a/contact-us.html
+++ b/contact-us.html
@@ -57,6 +57,6 @@
         <img src="contact-us/R-2-1024x608.jpg">
       </div>
     </div>
-    <script src="inside-code.js"></script>
+    <script src="code-except-home.js"></script>
   </body>
 </html>
