--- a/social-ethics.html
+++ b/social-ethics.html
@@ -133,6 +133,6 @@
       <div class="commands">social ethics</div>
       <div class="commands">contact us</div>
     </div>
-    <script src="inside-code.js"></script>
+    <script src="code-except-home.js"></script>
   </body>
 </html>
