--- a/practice.html
+++ b/practice.html
@@ -36,6 +36,22 @@
       <div class="overlay"></div>
     </div>
 
+    <div class="slider">
+      <div class="slides">
+          <div class="slide active">
+              <img src="front page/1.jpg" alt="Slide 1">
+          </div>
+          <div class="slide">
+              <img src="front page/2.jpg" alt="Slide 2">
+          </div>
+          <div class="slide">
+              <img src="front page/3.jpg" alt="Slide 3">
+          </div>
+      </div>
+      <button class="prev" onclick="prevSlide()">Previous</button>
+      <button class="next" onclick="nextSlide()">Next</button>
+    </div>
+
 
 
     <script src="practice.js"></script>
