--- a/practice.html
+++ b/practice.html
@@ -36,7 +36,7 @@
       <div class="overlay"></div>
     </div>
 
-    <div class="slider">
+    <!-- <div class="slider">
       <div class="slides">
           <div class="slide active">
               <img src="front page/1.jpg" alt="Slide 1">
@@ -50,6 +50,24 @@
       </div>
       <button class="prev" onclick="prevSlide()">Previous</button>
       <button class="next" onclick="nextSlide()">Next</button>
+    </div> -->
+
+
+
+    <div class="box-1">
+      <div class="box-2">
+        <div class="active-slide">
+          <img class="image" src="front page/1.jpg" alt="1">
+        </div>
+        <div class="slides">
+          <img class="image" src="front page/2.jpg" alt="2">
+        </div>
+        <div class="slides">
+          <img class="image" src="front page/3.jpg" alt="3">
+        </div>
+      </div>
+      <button class="prev buttons" onclick="prevSlide()">Previous</button>
+      <button class="next buttons" onclick="nextSlide()">Next</button>
     </div>
 
 
