--- a/practice.html
+++ b/practice.html
@@ -36,39 +36,39 @@
       <div class="overlay"></div>
     </div>
 
-    <!-- <div class="slider">
+    <div class="slider">
       <div class="slides">
-          <div class="slide active">
-              <img src="front page/1.jpg" alt="Slide 1">
-          </div>
-          <div class="slide">
-              <img src="front page/2.jpg" alt="Slide 2">
-          </div>
-          <div class="slide">
-              <img src="front page/3.jpg" alt="Slide 3">
-          </div>
+        <div class="slide">
+          <img src="front page/1.jpg" alt="Image 1">
+        </div>
+        <div class="slide">
+          <img src="front page/2.jpg" alt="Image 2">
+        </div>
+        <div class="slide">
+          <img src="front page/3.jpg" alt="Image 3">
+        </div>
+          
       </div>
-      <button class="prev" onclick="prevSlide()">Previous</button>
-      <button class="next" onclick="nextSlide()">Next</button>
-    </div> -->
-
-
-
-    <div class="box-1">
-      <div class="box-2">
-        <div class="active-slide">
-          <img class="image" src="front page/1.jpg" alt="1">
-        </div>
-        <div class="slides">
-          <img class="image" src="front page/2.jpg" alt="2">
-        </div>
-        <div class="slides">
-          <img class="image" src="front page/3.jpg" alt="3">
-        </div>
-      </div>
-      <button class="prev buttons" onclick="prevSlide()">Previous</button>
-      <button class="next buttons" onclick="nextSlide()">Next</button>
+      <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+      <button class="next" onclick="changeSlide(1)">&#10095;</button>
     </div>
+
+    <div class="box1">
+      <div class="box2">
+        <div class="box3">
+          <img src="front page/1.jpg" alt="Image 1">
+        </div>
+        <div class="box3">
+          <img src="front page/2.jpg" alt="Image 2">
+        </div>
+        <div class="box3">
+          <img src="front page/3.jpg" alt="Image 3">
+        </div>
+      </div>
+      <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+      <button class="next" onclick="changeSlide(1)">&#10095;</button>
+    </div>
+
 
 
 
