completed front page slider

--- a/home.html
+++ b/home.html
@@ -41,7 +41,20 @@
     </div>
      
     <div class="front-img">
-      front image
+      <div class="frontimg2">
+        <div class="frontimg3">
+          <img src="front page/1.jpg" alt="Image 1">
+        </div>
+        <div class="frontimg3">
+          <img src="front page/2.jpg" alt="Image 2">
+        </div>
+        <div class="frontimg3">
+          <img src="front page/3.jpg" alt="Image 3">
+        </div>
+      </div>
+      <button class="prev button1" onclick="changeSlide(-1)">&#10094;</button>
+      <button class="next button1" onclick="changeSlide(1)">&#10095;</button>
+
     </div>
 
     <div class="second-section">
