nav-bar almost done

--- a/supply-chain.html
+++ b/supply-chain.html
@@ -112,13 +112,14 @@
     </div>
 
     <div class="nav-bar">
-      <div class="commands">home</div>
-      <div class="commands">about us</div>
-      <div class="commands">our business</div>
-      <div class="commands">supply chain</div>
-      <div class="commands">social ethics</div>
-      <div class="commands">contact us</div>
+      <div class="nav-bar-commands " id="home1">home</div>
+      <div class="nav-bar-commands " id="abtus1">about us</div>
+      <div class="nav-bar-commands " id="ob1">our business</div>
+      <div class="nav-bar-commands " id="sc1">supply chain</div>
+      <div class="nav-bar-commands " id="se1">social ethics</div>
+      <div class="nav-bar-commands " id="cu1">contact us</div>
     </div>
     <script src="code-except-home.js"></script>
+    <script src="nav-bar.js"></script>
   </body>
 </html>
