--- a/contact-us.html
+++ b/contact-us.html
@@ -58,5 +58,16 @@
       </div>
     </div>
     <script src="code-except-home.js"></script>
+
+    <div class="nav-bar">
+      <div class="nav-bar-commands " id="home1">home</div>
+      <div class="nav-bar-commands " id="abtus1">about us</div>
+      <div class="nav-bar-commands " id="ob1">our business</div>
+      <div class="nav-bar-commands " id="sc1">supply chain</div>
+      <div class="nav-bar-commands " id="se1">social ethics</div>
+      <div class="nav-bar-commands " id="cu1">contact us</div>
+    </div>
+    <script src="code-except-home.js"></script>
+    <script src="nav-bar.js"></script>
   </body>
 </html>
