--- a/home.html
+++ b/home.html
@@ -108,7 +108,17 @@
       </div>
     </div>
     
-    <div class="logo-bar"> logo bar</div>
+    <div class="logo-bar"> 
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <div class="nav-bar">
         <div class="nav-bar-commands " id="home1">home</div>
         <div class="nav-bar-commands " id="abtus1">about us</div>
