--- a/practice.html
+++ b/practice.html
@@ -53,7 +53,7 @@
       <button class="next" onclick="changeSlide(1)">&#10095;</button>
     </div> -->
 
-    <!-- <div class="box1">
+    <div class="box1">
       <div class="box2">
         <div class="box3">
           <img src="front page/1.jpg" alt="Image 1">
@@ -67,36 +67,25 @@
       </div>
       <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
       <button class="next" onclick="changeSlide(1)">&#10095;</button>
-    </div> -->
-
-
-    <div class="slider-container">
-      <div class="slider">
-        <img src="logo-bar/Carrefour-1.jpg" alt="Logo 1">
-        <img src="logo-bar/Columbia-2.jpg" alt="Logo 2">
-        <img src="logo-bar/LCW-1.jpg" alt="Logo 3">
-        <img src="logo-bar/Lindex-2.jpg" alt="Logo 4">
-        <img src="logo-bar/OlD-Navy-1.jpg" alt="Logo 5">
-        <img src="logo-bar/Oliver-2.jpg" alt="Logo 6">
-        <img src="logo-bar/Oshkosh-1.jpg" alt="Logo 7">
-        <img src="logo-bar/Tchibo-1.jpg" alt="Logo 8">
-        <img src="logo-bar/TomTailor-2.jpg" alt="Logo 9">
-      </div>
     </div>
 
-    <div class="logo-contain">
-      <div class="slides">
-        <img src="logo-bar/Carrefour-1.jpg" alt="Logo 1">
-        <img src="logo-bar/Columbia-2.jpg" alt="Logo 2">
-        <img src="logo-bar/LCW-1.jpg" alt="Logo 3">
-        <img src="logo-bar/Lindex-2.jpg" alt="Logo 4">
-        <img src="logo-bar/OlD-Navy-1.jpg" alt="Logo 5">
-        <img src="logo-bar/Oliver-2.jpg" alt="Logo 6">
-        <img src="logo-bar/Oshkosh-1.jpg" alt="Logo 7">
-        <img src="logo-bar/Tchibo-1.jpg" alt="Logo 8">
-        <img src="logo-bar/TomTailor-2.jpg" alt="Logo 9">
+
+    
+
+    
+    <div class="a">
+      <div class="image-gallery">
+        <img src="logo-bar/Carrefour-1.jpg" alt="Logo 1" class="b">
+        <img src="logo-bar/Columbia-2.jpg" alt="Logo 2" class="b">
+        <img src="logo-bar/LCW-1.jpg" alt="Logo 3" class="b">
+        <img src="logo-bar/Lindex-2.jpg" alt="Logo 4" class="b">
+        <img src="logo-bar/OlD-Navy-1.jpg" alt="Logo 5" class="b">
+        <img src="logo-bar/Oliver-2.jpg" alt="Logo 6" class="b">
+        <img src="logo-bar/Oshkosh-1.jpg" alt="Logo 7" class="b">
+        <img src="logo-bar/Tchibo-1.jpg" alt="Logo 8" class="b">
+        <img src="logo-bar/TomTailor-2.jpg" alt="Logo 9" class="b">
       </div>
-    </div>
+    </div>  
 
     <script src="practice.js"></script>
 
