logo bar complete

--- a/home.html
+++ b/home.html
@@ -108,24 +108,35 @@
       </div>
     </div>
     
-    <div class="logo-bar"> 
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <div class="logo-bar">
+      <div class="second-div">
+        <div class="third-div">
+          <img src="logo-bar/Carrefour-1.jpg" alt="Logo 1" class="b">
+          <img src="logo-bar/Columbia-2.jpg" alt="Logo 2" class="b">
+          <img src="logo-bar/LCW-1.jpg" alt="Logo 3" class="b">
+          <img src="logo-bar/Lindex-2.jpg" alt="Logo 4" class="b">
+          <img src="logo-bar/OlD-Navy-1.jpg" alt="Logo 5" class="b">
+          <img src="logo-bar/Oliver-2.jpg" alt="Logo 6" class="b">
+        </div>
+        
+        <div class="third-div">
+          <img src="logo-bar/Oshkosh-1.jpg" alt="Logo 7" class="b">
+          <img src="logo-bar/Tchibo-1.jpg" alt="Logo 8" class="b">
+          <img src="logo-bar/TomTailor-2.jpg" alt="Logo 9" class="b">
+          <img src="logo-bar/Columbia-2.jpg" alt="Logo 2" class="b">
+          <img src="logo-bar/LCW-1.jpg" alt="Logo 3" class="b">
+          <img src="logo-bar/Lindex-2.jpg" alt="Logo 4" class="b">
+        </div>
+      </div>
+
     </div>
     <div class="nav-bar">
-        <div class="nav-bar-commands " id="home1">home</div>
-        <div class="nav-bar-commands " id="abtus1">about us</div>
-        <div class="nav-bar-commands " id="ob1">our business</div>
-        <div class="nav-bar-commands " id="sc1">supply chain</div>
-        <div class="nav-bar-commands " id="se1">social ethics</div>
-        <div class="nav-bar-commands " id="cu1">contact us</div>
+      <div class="nav-bar-commands " id="home1">home</div>
+      <div class="nav-bar-commands " id="abtus1">about us</div>
+      <div class="nav-bar-commands " id="ob1">our business</div>
+      <div class="nav-bar-commands " id="sc1">supply chain</div>
+      <div class="nav-bar-commands " id="se1">social ethics</div>
+      <div class="nav-bar-commands " id="cu1">contact us</div>
     </div>
     <script src="inside-code.js"></script>
     <script src="nav-bar.js"></script>
