finished only finishing touches left do it if you want

--- a/home.html
+++ b/home.html
@@ -13,12 +13,12 @@
       </div>
       <div class="top-bar">      
         <div class="commands top-home top-home-link">
-          <p class="command-text">  
+          <p class="command-text home-text">  
             Home
           </p>
         </div>
         <div class="commands top-about-us top-about-us-link" >
-          <p class="command-text">
+          <p class="command-text ">
             About Us
           </p>
         </div>
@@ -140,5 +140,6 @@
     </div>
     <script src="inside-code.js"></script>
     <script src="nav-bar.js"></script>
+    <script src="color-activator.js"></script>
   </body>
 </html>
