--- a/our-business.html
+++ b/our-business.html
@@ -17,12 +17,12 @@
           </p>
         </div>
         <div class="commands top-about-us top-about-us-link" >
-          <p class="command-text">
+          <p class="command-text ">
             About Us
           </p>
         </div>
         <div class="commands top-our-business top-our-business-link" >
-          <p class="command-text" >  
+          <p class="command-text ob" >  
             Our Business
           </p>
         </div>
@@ -90,5 +90,6 @@
     </div>
     <script src="code-except-home.js"></script>
     <script src="nav-bar.js"></script>
+    <script src="color-activator.js"></script>
   </body>
 </html>
