--- a/social-ethics.html
+++ b/social-ethics.html
@@ -31,7 +31,7 @@
           <p class="command-text">Supply Chain</p>
         </div>
         <div class="commands top-social-ethics top-social-ethics-link" >
-          <p class="command-text">Social Ethics</p>
+          <p class="command-text se">Social Ethics</p>
         </div>
         <div class="commands top-contact-us top-contact-us-link" >
           <p class="command-text">Contact Us</p>
@@ -135,5 +135,6 @@
     </div>
     <script src="code-except-home.js"></script>
     <script src="nav-bar.js"></script>
+    <script src="color-activator.js"></script>
   </body>
 </html>
