--- a/supply-chain.html
+++ b/supply-chain.html
@@ -28,7 +28,7 @@
           </p>
         </div>
         <div class="commands top-supply-chain top-supply-chain-link" >
-          <p class="command-text">Supply Chain</p>
+          <p class="command-text sc">Supply Chain</p>
         </div>
         <div class="commands top-social-ethics top-social-ethics-link" >
           <p class="command-text">Social Ethics</p>
@@ -121,5 +121,6 @@
     </div>
     <script src="code-except-home.js"></script>
     <script src="nav-bar.js"></script>
+    <script src="color-activator.js"></script>
   </body>
 </html>
