--- a/about-us.html
+++ b/about-us.html
@@ -11,12 +11,12 @@
       </div>
       <div class="top-bar">      
         <div class="commands top-home top-home-link">
-          <p class="command-text">  
+          <p class="command-text ">  
             Home
           </p>
         </div>
         <div class="commands top-about-us top-about-us-link" >
-          <p class="command-text">
+          <p class="command-text abt-us">
             About Us
           </p>
         </div>
@@ -26,7 +26,9 @@
           </p>
         </div>
         <div class="commands top-supply-chain top-supply-chain-link" >
-          <p class="command-text">Supply Chain</p>
+          <p class="command-text">
+            Supply Chain
+          </p>
         </div>
         <div class="commands top-social-ethics top-social-ethics-link" >
           <p class="command-text">Social Ethics</p>
@@ -128,6 +130,7 @@
     </div>
   <script src="inside-code.js"></script>
   <script src="nav-bar.js"></script>
+  <script src="color-activator.js"></script>
     
   </body>
 </html>
