--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
           <p class="command-text">Social Ethics</p>
         </div>
         <div class="commands top-contact-us top-contact-us-link" >
-          <p class="command-text">Contact Us</p>
+          <p class="command-text ct">Contact Us</p>
         </div>
       </div>
 
@@ -69,5 +69,6 @@
     </div>
     <script src="code-except-home.js"></script>
     <script src="nav-bar.js"></script>
+    <script src="color-activator.js"></script>
   </body>
 </html>
