--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
             <p>Our core business is garments merchandise-manufacturing. We apply our collective sourcing experience to make the best
 
             </p>
-            <button id="our-business-button">click here</button>
+            <button class="second-section-buttons" id="our-business-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div> 
@@ -89,7 +89,7 @@
             <p>We are committed to developing close ties with our esteemed customers through personalized services services
 
             </p>
-            <button id="supply-chain-button">click here</button>
+            <button class="second-section-buttons" id="supply-chain-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div> 
@@ -101,7 +101,7 @@
             <p>All suppliers and factories producing Lapland Textile Mfg. orders are entitle to a written employment contract
 
             </p>
-            <button id="social-ethics-button">click here</button>
+            <button class="second-section-buttons" id="social-ethics-button">click here</button>
           </div>
         </div>
         <div class="overlay"></div> 
